scss overlap fix

--- a/src/styles/AboutUs.scss
+++ b/src/styles/AboutUs.scss
@@ -7,7 +7,7 @@
     gap: 50px;
 }
 
-.heading {
+.about-heading {
     font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 45px;
@@ -19,7 +19,7 @@
     height: 140px;
 }
 
-.subheading {
+.about-subheading {
     font-size: 18px;
     line-height: 25px;
     max-width: 650px;
@@ -28,7 +28,7 @@
     font-family: sans-serif;
 }
 
-.about-img {
+.about-about-img {
     display: flex;
     justify-content: center;
 }
@@ -39,13 +39,13 @@
     width: 600px;
 }
 
-.title {
+.about-title {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.team {
+.about-team {
     font-family: "Lato", sans-serif;
     font-weight: 700;
     font-size: 45px;
@@ -57,11 +57,11 @@
     height: 140px;
 }
 
-.team:hover {
+.about-team:hover {
     cursor: default;
 }
 
-.container {
+.about-container {
     width: 100%;
     height: auto;
     display: flex;
@@ -71,7 +71,7 @@
     flex-wrap: wrap;
 }
 
-.card {
+.about-card {
     width: 250px;
     height: 300px;
     background-color: #fdfeff;
@@ -85,7 +85,7 @@
     overflow: hidden;
 }
 
-.profile-pic {
+.about-profile-pic {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -93,7 +93,7 @@
     transition-duration: 300ms;
 }
 
-.card:hover > .profile-pic {
+.about-card:hover > .about-profile-pic {
     margin-top: 30px;
     width: 120px;
     height: 120px;
@@ -102,7 +102,7 @@
     border: 1px solid lightgreen;
 }
 
-.member-info {
+.about-member-info {
     width: 100%;
     height: 0;
     display: flex;
@@ -113,12 +113,12 @@
     transition-delay: 100ms;
 }
 
-.card:hover > .member-info {
+.about-card:hover > .about-member-info {
     cursor: default;
     flex: 1;
 }
 
-.name {
+.about-name {
     margin-top: 20px;
     font-family: Oswald;
     font-size: 20px;
@@ -127,14 +127,14 @@
     color: blueviolet;
 }
 
-.subtitle {
+.about-subtitle {
     margin-top: 3px;
     font-family: sans-serif;
     font-size: 13px;
     font-weight: 200;
 }
 
-.description {
+.about-description {
     margin-top: 9px;
     padding-left: 15px;
     padding-right: 15px;
@@ -158,11 +158,11 @@
         padding: 0px;
     }
 
-    .heading {
+    .about-heading {
         font-size: 40px;
     }
 
-    .subheading {
+    .about-subheading {
         padding-top: 20px;
     }
 
@@ -174,11 +174,11 @@
         padding-bottom: 20px;
     }
 
-    .team {
+    .about-team {
         font-size: 40px;
     }
 
-    .container {
+    .about-container {
         gap: 20px;
     }
 }
